# zk-lsp.typst

./: CLAUDE.md  Cargo.toml  INSTALL.md  README.md
.github/workflows/: ci.yml  release.yml
Formula/: zk-lsp.rb
examples/hooks/: checklist.lua
examples/rules/: checklist.lisp
lua/: zk_hook_types.lua
src/: cli.rs  config.rs  context_export.rs  cycle.rs  dependency_graph.rs  graph_check.rs  index.rs  init.rs  link_gen.rs  main.rs  migrate.rs  note_ops.rs  parser.rs  reconcile.rs  server.rs  watcher.rs
src/handlers/: code_actions.rs  completion.rs  definition.rs  diagnostics.rs  formatting.rs  hover.rs  inlay_hints.rs  mod.rs  references.rs
src/hooks/: lua.rs  types.rs
src/reconcile/: ast.rs  default_module.rs  eval.rs  materialize.rs  mod.rs  observe.rs  parser.rs  typecheck.rs  types.rs
