[package]
name = "zk-lsp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zk-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify-debouncer-mini = "0.4"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
once_cell = "1"
url = "2"
chrono = "0.4"
dashmap = "5"
anyhow = "1"
